fix figure number

--- a/doc/06_ametop_first_report.Rmd
+++ b/doc/06_ametop_first_report.Rmd
@@ -60,7 +60,7 @@ The main challenge in assessing our primary objective lies in the presence of tw
 
 ![Count of matches in data](../misc/Table.png){width=75%}
 
-The table above shows the total number of patients where the observer's scores and the patient's FPS-R score align and where it does not align. To create the subset of data where the score matches, we use the following: 
+Figure 1 shows the total number of patients where the observer's scores and the patient's FPS-R score align and where it does not align. To create the subset of data where the score matches, we use the following: 
 
 * FPS-R scores 0 and 2 matched with the observer’s score 'None' = 135 patients
 * FPS-R scores 4 and 6 matched with the observer’s score 'Slight Pain' = 24 patients
@@ -68,7 +68,7 @@ The table above shows the total number of patients where the observer's scores a
 
 Before carrying out the statistical test, we will perform exploratory data analysis to examine the distribution of the target response, the FPS-R score.
 
-```{r, out.width="75%"}
+```{r, out.width="75%", fig.align='center'}
 # Read data
 file_path <- "../data/Ametop-PE data(new-Alex)(1control 2study).xlsx"
 original_data <- read_excel(file_path)
@@ -148,7 +148,9 @@ plot6 <- data %>% filter(Randomization == 2, `Match Responses` == "Yes") %>%
 grid.arrange(plot3, plot4, plot5, plot6, ncol = 2, nrow = 2)
 ```
 
-From the boxplot, we observe that the median FPS-R score for both the control and treatment groups is 2. The treatment group's data shows a higher concentration of scores at FPS-R 0 and 2, and is right-skewed. When examining the boxplot of the subset of data where the FPS-R scores and observer's scores align, their distributions do not appear significantly different. 
+Figure 2: Boxplots of Control and Study Group for Full and Subset Data
+
+From Figure 2, we observe that the median FPS-R score for both the control and treatment groups is 2. The treatment group's data shows a higher concentration of scores at FPS-R 0 and 2, and is right-skewed. When examining the boxplot of the subset of data where the FPS-R scores and observer's scores align, their distributions do not appear significantly different. 
 
 The statistical method used to assess whether the addition of vapocoolant spray reduces discomfort is the Welch Two Sample T-Test. This test is applied under the assumption that the differences between the control group and the study group follow a Normal distribution, as per the Central Limit Theorem (CLT). We conduct the t-test twice: first on the entire dataset, and second on the subset of data where the FPS-R scores and observer’s scores match. The null hypothesis is that the mean pain level is the same for both treatment groups, while the alternative hypothesis is that the mean pain level is lower for the treatment group using the vapocoolant spray compared to the group using Ametop alone. Thus, the test is a one-sided t-test. In accordance with Dr. Louis Scheepers' recommendation, the threshold for p-value significance is set at a 5% significance level.
 
@@ -160,10 +162,10 @@ Firstly, we conducted linear regression solely on the main effects, adhering to 
 
 **Secondary Objective 2: The incidence of side effects due to Ametop or the vapocoolant spray.**
 	
-**Study Design and Participants**
+**Study Design and Participants:**
 All participants initially included in the study were considered in the analysis, even those who withdrew before its conclusion, to consider patients who withdrew due to experiencing side effects and preserving the comprehensive nature of the data. Thus, all 240 participants of the study are included in this objective’s analysis.
 
-**Side Effects Categorization**
+**Side Effects Categorization:**
 Categories of observed side effects were extracted from the ‘Observed side effects’ column, where side effects of patients ranged from “Slight redness of skin from Ametop” to “quite red & itchy skin from Ametop. Underlying eczema.” These reports were categorized into distinct groups such as the individual side effect “Redness” and the combined side effect “Redness + Itching” to facilitate the quantitative analysis of side effects. 
 
 # Result
@@ -197,25 +199,162 @@ These results suggest that the discomfort during IV insertions is influenced not
 **Secondary Objective 2: The incidence of side effects due to Ametop or the vapocoolant spray.**
 
 **Overall Tolerance**
+```{r}
+# Pie chart draw function with percentages
+draw_pie_chart <- function(all_categories, title) {
+  # Count the occurrences of each category
+  category_counts <- table(all_categories)
 
-Figure 1: Observed Side Effects
-As illustrated in Figure 1, the vast majority of the study participants, 95%, reported no side effects, indicating a high level of tolerance for both treatments. Within the 5% of patients experiencing side effects, only 2.1% were attributed to the use of Ametop alone, whereas the incidence of side effects from the combination treatment was higher, at 2.9%.
+  # Calculate the percentage for each category
+  percentages <- round(category_counts / sum(category_counts) * 100, 1)
+
+  # Create labels that include both the category name and the percentage
+  labels <- paste(names(category_counts), " - ", percentages, "%", sep="")
+
+  # Create a pie chart with percentages
+  pie(category_counts,
+      main = title,
+      col = rainbow(length(category_counts)),
+      labels = labels,
+      cex = 0.6)
+}
+```
+
+```{r, fig.align='center'}
+# Summarize "Any side effects observed?" column
+side_effects_observed_summary <- data.frame(
+  ifelse(original_data$`Any side effects observed?` == "No", "No Side Effect",
+         ifelse(original_data$Randomization == 1, "Side Effect (Ametop alone)",
+                "Side Effect (Ametop + spray)"))
+)
+
+# Create a pie chart for the observed side effects
+draw_pie_chart(side_effects_observed_summary, "Observed Side Effects")
+```
+Figure 3: Observed Side Effects 
+
+As illustrated in Figure 3, the vast majority of the study participants, 95%, reported no side effects, indicating a high level of tolerance for both treatments. Within the 5% of patients experiencing side effects, only 2.1% were attributed to the use of Ametop alone, whereas the incidence of side effects from the combination treatment was higher, at 2.9%.
 
 **Side Effects in Ametop Alone Group**
 
+```{r}
+# Define the categorization function
+categorize_effects <- function(effect) {
+  effect_lower <- tolower(effect)
+  categories <- list(
+    Redness = "red|redness|pink",
+    Itching = "itchy|pruritic|pruritis",
+    Pain = "pain|painful",
+    Puffiness = "puffy"
+  )
 
-Figure 2: Combination Side Effects Distribution - Ametop Alone
-Figure 3: Individual Side Effects Distribution - Ametop Alone
+  identified_categories <- character(0)
 
-Figure 2 and Figure 3 present the distribution of side effects among patients treated with Ametop alone. Figure 2 shows that among those who reported side effects, 60% experienced redness only, while 40% experienced both redness and itching. No other combinations of side effects were reported. This suggests a tendency for side effects to present as redness alone or in conjunction with itching. Figure 3 further highlights that redness is the more prevalent individual side effect, reported by 71.4% of patients experiencing side effects, while itching was reported by 28.6%.
+  # Negation patterns
+  pattern_start <- "\\b(no|not)\\s+("
+  pattern_middle <- ")\\b|(no|not)\\s+\\w+\\s+or\\s+("
+  pattern_end <- ")"
+
+  for (category_name in names(categories)) {
+    symptom_pattern <- categories[[category_name]]
+
+    # Check for the symptom but exclude if negated
+    if (grepl(symptom_pattern, effect_lower)) {
+      negation_pattern <- paste0(
+        pattern_start, symptom_pattern, pattern_middle, symptom_pattern, pattern_end)
+      if (!grepl(negation_pattern, effect_lower)) {
+        identified_categories <- c(identified_categories, category_name)
+      }
+    }
+  }
+
+  # Return "Other" if no category is found
+  if (length(identified_categories) == 0) {
+    return("Other")
+  }
+
+  return(identified_categories)
+}
+```
+
+```{r}
+# Create and print a list of categories for each side effect
+categorize_and_print <- function(group_number) {
+  side_effects_data <- data.frame(SideEffects = na.omit(original_data[
+    original_data$Randomization == group_number,]$`Observed side effects`))
+  side_effects_data$Categories <- sapply(side_effects_data$SideEffects,
+                                          categorize_effects, USE.NAMES=FALSE)
+  print(data.frame(Description = side_effects_data$SideEffects,
+                   Categories = sapply(side_effects_data$Categories, paste, collapse = ", ")))
+  return(side_effects_data)
+}
+```
+
+```{r}
+# Pie chart draw function for combined categories
+draw_pie_chart_combined <- function(side_effects_data, title) {
+  # Combination Categories
+  all_categories <- sapply(side_effects_data$Categories, paste, collapse = " + ")
+
+  # Use the draw_pie_chart function to create the pie chart
+  draw_pie_chart(all_categories, title)
+}
+```
+
+```{r}
+# Pie chart draw function for individual categories
+draw_pie_chart_individual <- function(side_effects_data, title) {
+  # Flatten the list into a vector
+  all_categories <- unlist(side_effects_data$Categories)
+
+  # Use the draw_pie_chart function to create the pie chart
+  draw_pie_chart(all_categories, title)
+}
+```
+
+```{r, fig.align='center'}
+# Get the side effects data for the control group
+side_effects_data_control_group <- categorize_and_print(1)
+
+# Pie Chart for combined categories
+draw_pie_chart_combined(side_effects_data_control_group,
+                        "Combination Side Effects Distribution - Ametop alone")
+```
+
+Figure 4: Combination Side Effects Distribution - Ametop Alone
+
+```{r, fig.align='center'}
+# Pie Chart for individual categories
+draw_pie_chart_individual(side_effects_data_control_group,
+                          "Individual Side Effects Distribution - Ametop alone")
+```
+
+Figure 5: Individual Side Effects Distribution - Ametop Alone
+
+Figure 4 and Figure 5 present the distribution of side effects among patients treated with Ametop alone. Figure 4 shows that among those who reported side effects, 60% experienced redness only, while 40% experienced both redness and itching. No other combinations of side effects were reported. This suggests a tendency for side effects to present as redness alone or in conjunction with itching. Figure 5 further highlights that redness is the more prevalent individual side effect, reported by 71.4% of patients experiencing side effects, while itching was reported by 28.6%.
 
 **Side Effects in Ametop with Vapocoolant Spray Group**
 
+```{r, fig.align='center'}
+# Get the side effects data for the study group
+side_effects_data_study_group <- categorize_and_print(2)
 
-Figure 4: Combination Side Effects Distribution - Ametop + Spray
-Figure 5: Individual Side Effects Distribution - Ametop + Spray
+# Pie Chart for combined categories
+draw_pie_chart_combined(side_effects_data_study_group,
+                        "Combination Side Effects Distribution - Ametop + Spray")
+```
 
-For patients treated with both Ametop and a vapocoolant spray, Figure 4 and Figure 5 depict the side effects. Figure 4 reveals a varied response, with redness alone constituting 57.1% of side effects, and pain, puffiness, and redness with itching each accounting for 14.3%. Figure 5 indicates that redness remains the most reported individual side effect at 62.5%, with itching, pain, and puffiness equally reported at 12.5% each.
+Figure 6: Combination Side Effects Distribution - Ametop + Spray
+
+```{r, fig.align='center'}
+# Pie Chart for individual categories
+draw_pie_chart_individual(side_effects_data_study_group,
+                          "Individual Side Effects Distribution - Ametop + Spray")
+```
+
+Figure 7: Individual Side Effects Distribution - Ametop + Spray
+
+For patients treated with both Ametop and a vapocoolant spray, Figure 6 and Figure 7 depict the side effects. Figure 6 reveals a varied response, with redness alone constituting 57.1% of side effects, and pain, puffiness, and redness with itching each accounting for 14.3%. Figure 7 indicates that redness remains the most reported individual side effect at 62.5%, with itching, pain, and puffiness equally reported at 12.5% each.
 
 # Conclusion
 
@@ -306,6 +445,8 @@ plot(lm_model_without_interactions)
 ```{r, fig.align='center'}
 plot(lm_model_with_interactions)
 ```
+
+\newpage
 
 ## For mentor
 
