--- a/src/06_ametop_first_report.Rmd
+++ b/src/06_ametop_first_report.Rmd
@@ -17,7 +17,7 @@ header-includes:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 # Set up echo as false to not print the R code in the report
-
+library(knitr)
 library(readxl)
 library(ggplot2)
 library(tidyverse)
@@ -28,13 +28,13 @@ options(repr.plot.width=20, repr.plot.height=20)
 
 
 \begin{center}
-- Fabiola Grace
+Fabiola Grace
 
-- Maggie Ruan
+Maggie Ruan
 
-- Runhe Guo
+Runhe Guo
 
-- Yimin You
+Yimin You
 
 \end{center}
 
@@ -307,8 +307,6 @@ categorize_and_print <- function(group_number) {
     original_data$Randomization == group_number,]$`Observed side effects`))
   side_effects_data$Categories <- sapply(side_effects_data$SideEffects,
                                           categorize_effects, USE.NAMES=FALSE)
-  print(data.frame(Description = side_effects_data$SideEffects,
-                   Categories = sapply(side_effects_data$Categories, paste, collapse = ", ")))
   return(side_effects_data)
 }
 ```
@@ -335,6 +333,26 @@ draw_pie_chart_individual <- function(side_effects_data, title) {
 }
 ```
 
+```{r}
+# Create a data frame with the descriptions and categories
+skin_conditions <- data.frame(
+  Number = 1:5,
+  Description = c("Slight redness of skin from ametop",
+                  "vey mild pink and pruritic skin.",
+                  "pink skin and very mild itching",
+                  "quite red & itchy skin from ametop. Underlying eczema.",
+                  "redness & raised area under ametop"),
+  Categories = c("Redness",
+                 "Redness, Itching",
+                 "Redness",
+                 "Redness, Itching",
+                 "Redness")
+)
+
+# Use kable to create the table
+kable(skin_conditions, format = "markdown", caption = "Descriptions and Categories for Control Group")
+```
+
 ```{r, fig.align='center', fig.cap = "Combination Side Effects Distribution - Ametop alone"}
 # Get the side effects data for the control group
 side_effects_data_control_group <- categorize_and_print(1)
@@ -353,6 +371,30 @@ draw_pie_chart_individual(side_effects_data_control_group,
 Figure 3 and Figure 4 present the distribution of side effects among patients treated with Ametop alone. Figure 3 shows that among those who reported side effects, 60% experienced redness only, while 40% experienced both redness and itching. No other combinations of side effects were reported. This suggests a tendency for side effects to present as redness alone or in conjunction with itching. Figure 4 further highlights that redness is the more prevalent individual side effect, reported by 71.4% of patients experiencing side effects, while itching was reported by 28.6%.
 
 **Side Effects in Ametop with Vapocoolant Spray Group**
+
+```{r}
+# Create a data frame with the descriptions and categories
+skin_conditions <- data.frame(
+  Number = 1:7,
+  Description = c("Some redness on skin, more than usual",
+                  "complained of pain on the spray.",
+                  "slightly puffy hands after ametop removal",
+                  "redness from ametop",
+                  "redness at ametop site. Not painful or pruritic.",
+                  "quite itchy from ametop. Redness.",
+                  "Slight redness from ametop. No pruritis."),
+  Categories = c("Redness",
+                 "Pain",
+                 "Puffiness",
+                 "Redness",
+                 "Redness",
+                 "Redness, Itching",
+                 "Redness")
+)
+
+# Use kable to create the table
+kable(skin_conditions, format = "markdown", caption = "Descriptions and Categories for Study Group")
+```
 
 ```{r, fig.align='center', fig.cap = "Combination Side Effects Distribution - Ametop + Spray"}
 # Get the side effects data for the study group
