--- a/src/06_ametop_first_report.Rmd
+++ b/src/06_ametop_first_report.Rmd
@@ -368,7 +368,7 @@ draw_pie_chart_individual(side_effects_data_control_group,
                           "Individual Side Effects Distribution - Ametop alone")
 ```
 
-Figure 3 and Figure 4 present the distribution of side effects among patients treated with Ametop alone. Figure 3 shows that among those who reported side effects, 40% experienced redness only, while 60% experienced both redness and itching. No other combinations of side effects were reported. This suggests a tendency for side effects to present as redness alone or in conjunction with itching. Figure 4 further highlights that redness remains the most reported individual side effect, at 62.5%, while itching was reported at 37.5%.
+Figure 3 and Figure 4 present the distribution of side effects among patients treated with Ametop alone. Figure 3 shows that among those who reported side effects, 40% experienced redness only, while 60% experienced both redness and itching. No other combinations of side effects were reported. This suggests a tendency for side effects to present as redness alone or in conjunction with itching. Figure 4 further highlights that redness is the most reported individual side effect, at 62.5%, while itching was reported at 37.5%.
 
 **Side Effects in Ametop with Vapocoolant Spray Group**
 
